fixed a few layout issues with mobile and desktop.

--- a/background-video.css
+++ b/background-video.css
@@ -11,7 +11,6 @@
 
 .video-background__container {
   width:100vw;
-  /*! height:100vh; */
 }
 
 
@@ -32,6 +31,9 @@
   
 }
 @media (max-width: 480px) {
-    .video-background {height: 72.3%;width: 100%;object-position: 79.1%;transform: translateY(-2%);}
-  
+    .video-background {height: 118vh;width: 100vw;object-position: 72.1%;transform: translateY(-2%);}
+    .video-background__container {
+  width:100vw;
+  height:100vh;
+}
 }
